tests/builtins/errors/sorted_invalid_key.orus
fn main() {
    let items = [1, 2]
    print(sorted(items, 1, false))
}
